Several improvements.